Break long words on mobile; fixes tab display issue in code-component

--- a/css/code-component.css
+++ b/css/code-component.css
@@ -28,6 +28,8 @@
 .code--line-content {
 	display: table-cell;
 	padding: 5px;
+	overflow-wrap: break-word;
+	word-break: break-all;
 }
 
 .code--line-number {
@@ -61,7 +63,6 @@
 }
 
 .code-component .tab {
-	width: 30px;
 	display: inline-block;
 	background: linear-gradient(transparent 0%, transparent calc(50% - 1px), #74705d 50%, transparent calc(50% + 1px), transparent 100%);
 	margin-right: 5px;
@@ -85,4 +86,10 @@
 .code-component .string .number,
 .code-component .string .symbol {
 	color: #e7db74;
+}
+
+@media screen and (max-width: 768px) {
+	.code--line-content {
+		font-size: 11px;
+	}
 }
